tests/snapshots/snapshot_tests__array_init_increm_two_arrs_const.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_increm_two_arrs_const.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 i+0) 1)) i+0) (+ (Read_Int_Int a+0 i+0) 1))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) i+0) x+0)",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ (Read_Int_Int b+0 i+0) 1)) i+0) (+ (Read_Int_Int b+0 i+0) 1))",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 x+0) i+0) x+0)",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 x+0) 0) (Read_Int_Int b+0 0)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= Z 0)) (= (Read_Int_Int (Write_Int_Int a+0 0 18458) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z 0)) (= (Read_Int_Int (Write_Int_Int b+0 0 1324) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 i+0) 1)) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ (Read_Int_Int b+0 i+0) 1)) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 x+0) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= i+0 i+1)) (= (Read_Int_Int (Write_Int_Int a+1 i+1 x+1) i+0) (Read_Int_Int a+1 i+0)))",
        "(=> (not (= i+0 i+4)) (= (Read_Int_Int (Write_Int_Int b+4 i+4 (+ (Read_Int_Int b+4 i+4) 1)) i+0) (Read_Int_Int b+4 i+0)))",
        "(=> (not (= i+1 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 i+0) 1)) i+1) (Read_Int_Int a+0 i+1)))",
        "(=> (not (= i+1 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ (Read_Int_Int b+0 i+0) 1)) i+1) (Read_Int_Int b+0 i+1)))",
        "(=> (not (= i+2 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 i+0) 1)) i+2) (Read_Int_Int a+0 i+2)))",
        "(=> (not (= i+2 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 x+0) i+2) (Read_Int_Int b+0 i+2)))",
        "(=> (not (= i+4 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 x+0) i+4) (Read_Int_Int b+0 i+4)))",
    ],
}
